[tool.poetry]
name = "pooler"
version = "0.1.0"
description = ""
authors = ["Powerloom, Inc."]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
redis = "^4.4.0"
setproctitle = "^1.3.2"
timeago = "^1.0.16"
typer = "^0.7.0"
psutil = "^5.9.4"
importlib = "^1.0.4"
pika = "^1.3.1"
aio-pika = "^8.3.0"
gunicorn = "^20.1.0"
aiohttp = "^3.8.3"
web3 = "^5.31.3"
async-limits = {git = "https://github.com/powerloom/limits.git"}
tenacity = "^8.1.0"
limits = "^2.8.0"
uvicorn = "^0.20.0"
frozendict = "^2.3.4"
multiaddr = "^0.0.9"
idna = "^3.4"
uvloop = "^0.17.0"
loguru = "^0.7.0"
httpx = "^0.24.0"
fastapi = "^0.95.1"
ifps-client = {git = "https://git@github.com/PowerLoom/py-ipfs-client"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
