[tool.poetry]
name = "Powerloom Snapshotter"
version = "0.1.0"
description = ""
authors = ["Powerloom, Inc."]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
redis = "^4.6.0"
timeago = "^1.0.16"
typer = "^0.7.0"
psutil = "^5.9.5"
importlib = "^1.0.4"
pika = "^1.3.2"
gunicorn = "^20.1.0"
aiohttp = "^3.8.5"
async-limits = {git = "https://github.com/powerloom/limits.git"}
tenacity = "^8.2.2"
limits = "^2.8.0"
uvicorn = "^0.20.0"
frozendict = "^2.3.8"
multiaddr = "^0.0.9"
idna = "^3.4"
uvloop = "^0.17.0"
loguru = "^0.7.0"
httpx = "^0.24.1"
fastapi = "^0.95.1"
ifps-client = {git = "https://git@github.com/PowerLoom/py-ipfs-client.git"}
aiorwlock = "^1.3.0"
aio-pika = "^9.1.4"
fastapi-pagination = "^0.12.12"
web3 = "^6.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
