[tool.poetry]
name = "Powerloom Snapshotter"
version = "0.1.0"
description = ""
authors = ["Powerloom, Inc."]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
timeago = "^1.0.16"
typer = "^0.7.0"
psutil = "^5.9.5"
importlib = "^1.0.4"
gunicorn = "^20.1.0"
aiohttp = "^3.8.5"
web3 = "^6.13.0"
tenacity = "^8.2.2"
uvicorn = "^0.20.0"
frozendict = "^2.3.8"
multiaddr = "^0.0.9"
idna = "^3.4"
uvloop = "^0.19.0"
loguru = "^0.7.0"
httpx = "^0.24.1"
fastapi = "^0.95.1"
ifps-client = {git = "https://git@github.com/PowerLoom/py-ipfs-client.git"}
aiorwlock = "^1.3.0"
fastapi-pagination = "^0.12.12"
coincurve = "^18.0.0"
safe-pysha3 = "^1.0.4"
ipfs-cid = "^1.0.0"
eip712-structs = {git = "https://github.com/powerloom/py-eip712-structs"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
